--- a/src/package.json
+++ b/src/package.json
@@ -11,8 +11,8 @@
     "crypto-js": "^4.1.1",
     "discord.js": "^13.5.0",
     "express": "^4.17.2",
+    "moment": "^2.29.1",
     "quick.db": "^7.1.3"
   },
-  "devDependencies": {},
   "description": ""
 }
